--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "format-src":"prettier --write \"src/**/*.{ts,tsx,js,jsx,mdx}\" --cache & next lint --fix"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -35,6 +36,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eslint-plugin-storybook": "^0.11.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.454.0",
     "next": "^15.0.1",
