--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,6 @@
     "**/*.cjs",
     "**/*.js",
     ".next/types/**/*.ts"
-  ],
+, "src/components/dndKit/draggable.tsx", "src/components/dndKit/droppable.tsx"  ],
   "exclude": ["node_modules"]
 }
