--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "api/**/*.ts": {
+      "app/api/**/*.ts": {
         "includeFiles": "node_modules/.prisma/**"
       }
     }
